# halo2-browser

./: .gitignore  Cargo.toml  LICENSE  package.json  pnpm-lock.yaml  readme.md  subdirPackage.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: halo2-browser-tests.yml  halo2-wasm-tests.yml  preview.yaml  production.yaml
cli/: package.json  pnpm-lock.yaml  readme.md  readmeTemplate.md  tsconfig.json
cli/scripts/: postTsc.js  toggleDeployed.js  toggleLocal.js
cli/src/: index.ts  keygen.ts  mock.ts  prove.ts  scaffold.ts  utils.ts  verify.ts
halo2-lib-js/: .gitignore  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
halo2-lib-js/scripts/: convertDTs.js  convertSrs.js  postTsc.js  toggleLocal.js
halo2-lib-js/src/: global.d.ts  index.ts
halo2-lib-js/tests/: .gitignore  gate.ts  range.ts  run.ts  test_constant.py  test_constant.sh  test_vk.py  test_vk.sh  utils.ts
halo2-repl/: .env.example  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
halo2-repl/app/: layout.tsx  page.tsx
halo2-repl/components/: AxiomOverlay.tsx  Button.tsx  ButtonGroup.tsx  InputWithLabel.tsx  MenuButton.tsx  MenuDropdown.tsx  Modal.tsx  Tab.tsx  TxNotification.tsx  Web3Wrapper.tsx
halo2-repl/public/: kzg_bn254_14.srs
halo2-repl/scripts/: toggleDeployed.js  toggleLocal.js
halo2-repl/utils/: circuit.ts  (+4 more)
halo2-wasm/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  readme.md  subdirPackage.json
halo2-wasm/template/: Cargo.toml  build.sh
halo2-wasm/template/src/: lib.rs
scripts/: build-js.sh  build-web.sh  build.sh  makePackage.js  makePkg.js  makeSubdirPkg.js  toggleDeployed.sh  toggleLocal.sh  updateCargoVersion.js
src/: halo2lib.rs  index.js  lib.rs  vkey.rs
(+49 files in other folders)
