[package]
name = "halo2-wasm"
version = "0.1.46"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.87"

halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", package = "halo2-base", branch="develop", features = [
    "halo2-axiom",
] }

snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch="develop", default-features = false, features = [
    "loader_halo2",
    "halo2-axiom",
] }
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch="develop", default-features = false, features = [
    "loader_halo2",
    "halo2-axiom",
] }

getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
itertools = "0.10"
web-sys = { version = "0.3", features = [
    "Request",
    "Window",
    "Response",
    "console",
] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_bytes = "0.11"
bincode = "1.3"
tsify = "0.4.5"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-rayon = { version = "1.0" }

[features]
default=["rayon"]
rayon=[]
